Add CSV manager to the offline mode